# boekhouder

./: pyproject.toml
boekhouder/: cmd.py  data.py  importer.py
